--- a/app/styles/Login.module.css
+++ b/app/styles/Login.module.css
@@ -92,8 +92,8 @@
 }
 
 .puzzle-piece {
-    width: 5rem;
-    height: 3.5rem;
+    width: 14rem;
+    height: auto;
     object-fit: contain;
 }
 
